--- a/lens/styles/Home.module.css
+++ b/lens/styles/Home.module.css
@@ -16,6 +16,21 @@
   display: flex;
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  background: #fff;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 20px 0px;
+  width: 100%;
+  font-size: large;
+}
+
 .h1 {
   font-family: 'Syncopate', sans-serif;
   line-height: 0.1;
@@ -81,12 +96,53 @@
   margin: 0 5px;
 }
 
+.toaster {
+  font-size: 0.4em;
+}
+
+.inactivebutton {
+  border: none;
+  border-radius: 30px;
+  outline: 0;
+  background: rgb(67, 67, 67);
+  font-size: inherit;
+  color: #adadad;
+  padding: 10px 30px;
+  font-family: inherit;
+  font-size: 30px;
+  cursor: pointer;
+  transition: flip 0.5s;
+  margin: 0 5px;
+}
+
 .button:hover {
   scale: 1.03;
   background: #ABFE2C;
   color: black;
 }
 
+.signupContainer {
+  background: #000000;
+  width: 100vw;
+  min-height: 100vh;
+  position: relative;
+}
+
+.signupCard {
+  width: 500px;
+  padding: 40px;
+  border-radius: 20px;
+  background-color: #fff;
+  height: max-content;
+  position: absolute;
+  left: 50%;
+  margin-top: 100px;
+  transform: translateX(-50%);
+  box-shadow: -1px -1px 14px -2px rgba(36,36,36,0.04);
+  -webkit-box-shadow: -1px -1px 14px -2px rgba(36,36,36,0.04);
+  -moz-box-shadow: -1px -1px 14px -2px rgba(36,36,36,0.04);
+  z-index: 1;
+}
 @keyframes flip {
   0% {
     transform: rotate(0deg);
