--- a/lens/styles/Profile.module.css
+++ b/lens/styles/Profile.module.css
@@ -41,7 +41,7 @@
 .sidebar {
     width: 40%;
     height: 300px;
-    background: white;
+    background: #dadada;
     margin: 20px;
     padding: 20px 30px;
     border: 2px solid black;
